Fixed mobile sidebar spacing

--- a/Froglanders/css/style2.css
+++ b/Froglanders/css/style2.css
@@ -1158,7 +1158,8 @@ form label {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   content: "\e921";
-  font-size: 20px;
+  font-size: 35px;
+  padding-top: 6px;
   color: rgba(255, 255, 255, 0.2);
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
